--- a/views/index.jade
+++ b/views/index.jade
@@ -60,21 +60,7 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/118128802/')
-                p Producing repetitive reports/dashboards using R
-                  span on 5 Jun, Wed
-                p.tagline by R User Group - Singapore (RUGS)
-            li
-              a(href='http://www.meetup.com/IxDA-Singapore/events/120449312/')
-                p IXD Workshop: Introduction to Content Modeling
-                  span on 6 Jun, Thu
-                p.tagline by IxDA Singapore
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93222582/')
-                p HTML5 Series - Chapter 7: Oh so precious Device !
-                  span on 7 Jun, Fri
-                p.tagline by HTML5Rocks@SG
+
             li
               a(href='https://www.facebook.com/events/351016308354057')
                 p WWDC Live @ The Pragmatic Lab
@@ -91,8 +77,13 @@ html(lang='en')
                   span on 13 Jun, Thu
                 p.tagline by Singapore JS
             li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93223052/')
-                p HTML5 Series - Chapter 8: It's also about style !
+              a(href='https://www.facebook.com/events/652363981446549/')
+                p AWS User Group Singapore 2nd Meetup
+                  span on 13 Jun, Thu
+                p.tagline by AWS User Group Singapore
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/121666282/')
+                p HTML5 Series - Chapter 6: ... so tricky details !
                   span on 21 Jun, Fri
                 p.tagline by HTML5Rocks@SG
             li
