--- a/views/index.jade
+++ b/views/index.jade
@@ -87,6 +87,11 @@ html(lang='en')
                   span on 21 Jun, Fri
                 p.tagline by HTML5Rocks@SG
             li
+              a(href='https://www.facebook.com/events/273973432747365/')
+                p Getting started With Sketch
+                  span on 26 Jun, Wed
+                p.tagline by buUuk
+            li
               a(href='http://sg-hackidemia.eventbrite.sg/')
                 p HacKIDemia Singapore
                   span on 29 Jun, Sat
