--- a/views/index.jade
+++ b/views/index.jade
@@ -53,9 +53,9 @@ html(lang='en')
       .main.container
 
         div.live
-          h3 Catch We Build SG LIVE
-          p.countdown
-          p#livetime
+          h3 Catch We Build SG LIVE next month
+          //- p.countdown
+          //- p#livetime
 
         section
           h3 open events
