--- a/views/index.jade
+++ b/views/index.jade
@@ -53,7 +53,7 @@ html(lang='en')
       .main.container
 
         div.live
-          h3 Catch We Build SG LIVE next month
+          h3 Catch We Build SG LIVE next month!
           //- p.countdown
           //- p#livetime
 
@@ -81,6 +81,11 @@ html(lang='en')
                 p AWS User Group Singapore 2nd Meetup
                   span on 13 Jun, Thu
                 p.tagline by AWS User Group Singapore
+            li
+              a(href='https://www.facebook.com/events/475451172524206/')
+                p DestrActions 2013-06 SG: 2nd Anniversary
+                  span on 18 Jun, Tue
+                p.tagline by DestrActions SG
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/121666282/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
