bHappening added to footer

--- a/views/index.jade
+++ b/views/index.jade
@@ -62,11 +62,6 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='https://www.facebook.com/events/351016308354057')
-                p WWDC Live @ The Pragmatic Lab
-                  span on 10 Jun, Mon
-                p.tagline by The Pragmatic Lab
-            li
               a(href='http://www.meetup.com/Agile-Singapore/events/119472542/')
                 p An evening with Jean Tabaka
                   span on 12 Jun, Wed
@@ -116,7 +111,8 @@ html(lang='en')
             Checkout more cool events and people in startup, arts and tech with
             [thelist.sg](http://thelist.sg/),
             [connections.sg](http://connections.sg/),
-            [hackerspace calendar](http://hackerspace.sg/calendar/hackerspacesg-events/) and
+            [hackerspace](http://hackerspace.sg/calendar/hackerspacesg-events/),
+            [bHappening](http://bhappening.wordpress.com/) and
             [sge calendar](http://sge.io/calendar/)
       ul.social
         li
