scripts for countdown

--- a/views/index.jade
+++ b/views/index.jade
@@ -53,29 +53,14 @@ html(lang='en')
       .main.container
 
         div.live
-          h3 Catch We Build SG LIVE next month!
-          //- p.countdown
-          //- p#livetime
+          h3 Catch We Build SG LIVE
+          p.countdown
+          p#livetime
 
         section
           h3 open events
           ul.open-list.first
 
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/119472542/')
-                p An evening with Jean Tabaka
-                  span on 12 Jun, Wed
-                p.tagline by Agile Singapore
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/119469622/')
-                p Book Club: Dom Enlightenment
-                  span on 13 Jun, Thu
-                p.tagline by Singapore JS
-            li
-              a(href='https://www.facebook.com/events/652363981446549/')
-                p AWS User Group Singapore 2nd Meetup
-                  span on 13 Jun, Thu
-                p.tagline by AWS User Group Singapore
             li
               a(href='https://www.facebook.com/events/475451172524206/')
                 p DestrActions 2013-06 SG: 2nd Anniversary
