--- a/views/index.jade
+++ b/views/index.jade
@@ -62,25 +62,35 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='https://www.facebook.com/events/475451172524206/')
-                p DestrActions 2013-06 SG: 2nd Anniversary
-                  span on 18 Jun, Tue
-                p.tagline by DestrActions SG
+              a(href='http://www.meetup.com/Singapore-JS/events/124609972/')
+                p Book Club: Dom Enlightenment
+                  span on 20 Jun, Thu
+                p.tagline by Singapore JS
             li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/121666282/')
-                p HTML5 Series - Chapter 6: ... so tricky details !
-                  span on 21 Jun, Fri
-                p.tagline by HTML5Rocks@SG
+              a(href='http://www.meetup.com/Agile-Singapore/events/121752722/')
+                p Jun/2013 - Open Space
+                  span on 26 Jun, Wed
+                p.tagline by Agile Singapore
             li
               a(href='https://www.facebook.com/events/273973432747365/')
                 p Getting started With Sketch
                   span on 26 Jun, Wed
                 p.tagline by buUuk
             li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/121666282/')
+                p HTML5 Series - Chapter 6: ... so tricky details !
+                  span on 28 Jun, Fri
+                p.tagline by HTML5Rocks@SG
+            li
               a(href='http://sg-hackidemia.eventbrite.sg/')
                 p HacKIDemia Singapore
                   span on 29 Jun, Sat
                 p.tagline by William Hooi
+            li
+              a(href='https://www.facebook.com/events/510620365658892/')
+                p iOS Dev Scout # July Meetup
+                  span on 15 Jul, Mon
+                p.tagline by iOS DevScout
 
         section
           h3 open source
