--- a/views/index.jade
+++ b/views/index.jade
@@ -60,12 +60,6 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/124609972/')
-                p Book Club: Dom Enlightenment
-                  span on 20 Jun, Thu
-                p.tagline by Singapore JS
             li
               a(href='http://www.meetup.com/Agile-Singapore/events/121752722/')
                 p Jun/2013 - Open Space
@@ -76,6 +70,11 @@ html(lang='en')
                 p Getting started With Sketch
                   span on 26 Jun, Wed
                 p.tagline by buUuk
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/125753932/')
+                p Book Club: Dom Enlightenment
+                  span on 27 Jun, Thu
+                p.tagline by Singapore JS
             li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/121666282/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
@@ -91,6 +90,11 @@ html(lang='en')
                 p iOS Dev Scout # July Meetup
                   span on 15 Jul, Mon
                 p.tagline by iOS DevScout
+            li
+              a(href='https://www.facebook.com/events/538311776229894')
+                p AWS User Group Singapore 3rd Meetup
+                  span on 15 Jul, Mon
+                p.tagline by AWS User Group Singapore
 
         section
           h3 open source
@@ -119,7 +123,7 @@ html(lang='en')
         li
           a(href='https://plus.google.com/115395182582724849094')
            &#xe239;
-      </ul>
+
     script
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-37308530-1']);
