--- a/views/index.jade
+++ b/views/index.jade
@@ -61,16 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Agile-Singapore/events/121752722/')
-                p Jun/2013 - Open Space
-                  span on 26 Jun, Wed
-                p.tagline by Agile Singapore
-            li
-              a(href='https://www.facebook.com/events/273973432747365/')
-                p Getting started With Sketch
-                  span on 26 Jun, Wed
-                p.tagline by buUuk
-            li
               a(href='http://www.meetup.com/Singapore-JS/events/125753932/')
                 p Book Club: Dom Enlightenment
                   span on 27 Jun, Thu
@@ -85,6 +75,11 @@ html(lang='en')
                 p HacKIDemia Singapore
                   span on 29 Jun, Sat
                 p.tagline by William Hooi
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/126370252/')
+                p talk.js
+                  span on 1 Jul, Mon
+                p.tagline by Singapore JS
             li
               a(href='https://www.facebook.com/events/510620365658892/')
                 p iOS Dev Scout # July Meetup
