--- a/views/index.jade
+++ b/views/index.jade
@@ -62,20 +62,30 @@ html(lang='en')
           ul.open-list.first
 
             li
-              a(href='http://www.meetup.com/Singapore-JS/events/126370252/')
-                p talk.js
-                  span on 1 Jul, Mon
-                p.tagline by Singapore JS
-            li
               a(href='http://www.meetup.com/Singapore-JS/events/125757492/')
                 p Book Club: Dom Enlightenment
                   span on 4 Jul, Thu
                 p.tagline by Singapore JS
             li
+              a(href='http://www.eventbrite.com/event/7323383437')
+                p Creative Crew Talks - July Meeting 2013
+                  span on 9 Jul, Tue
+                p.tagline by Creative Crew
+            li
+              a(href='http://www.meetup.com/ShapewaysCommunity/Singapore/956382/')
+                p Singapore 3D Printing Meetup
+                  span on 11 Jul, Thu
+                p.tagline by Singapore Shapeways Community
+            li
               a(href='https://www.facebook.com/events/510620365658892/')
                 p iOS Dev Scout # July Meetup
                   span on 15 Jul, Mon
                 p.tagline by iOS DevScout
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/127560042/')
+                p July Meetup
+                  span on 16 Jul, Tue
+                p.tagline by Singapore Ruby Group
             li
               a(href='https://www.facebook.com/events/538311776229894')
                 p AWS User Group Singapore 3rd Meetup
