--- a/views/index.jade
+++ b/views/index.jade
@@ -86,6 +86,11 @@ html(lang='en')
                   span on 15 Jul, Mon
                 p.tagline by AWS User Group Singapore
             li
+              a(href='http://ccsg-workshop0813.eventbrite.com/')
+                p Organising Life and Work with Evernote
+                  span on 3 Aug, Sat
+                p.tagline by Creative Crew
+            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/121666282/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
                   span on 16 Aug, Fri
