--- a/views/index.jade
+++ b/views/index.jade
@@ -86,6 +86,11 @@ html(lang='en')
                   span on 15 Jul, Mon
                 p.tagline by AWS User Group Singapore
             li
+              a(href='http://www.meetup.com/makermeetup/Singapore-SG/986032/')
+                p Singapore Makers Forum
+                  span on 27 Jul, Sat
+                p.tagline by Singapore MAKE Community
+            li
               a(href='http://ccsg-workshop0813.eventbrite.com/')
                 p Organising Life and Work with Evernote
                   span on 3 Aug, Sat
