--- a/views/index.jade
+++ b/views/index.jade
@@ -81,6 +81,11 @@ html(lang='en')
                   span on 27 Jul, Sat
                 p.tagline by Singapore MAKE Community
             li
+              a(href='https://www.facebook.com/events/402721889837450/')
+                p Singapore Mini Maker Faire: 3D Printing Forum
+                  span on 28 Jul, Sun
+                p.tagline by William Hooi
+            li
               a(href='http://ccsg-workshop0813.eventbrite.com/')
                 p Organising Life and Work with Evernote
                   span on 3 Aug, Sat
