--- a/views/index.jade
+++ b/views/index.jade
@@ -54,8 +54,8 @@ html(lang='en')
 
         div.live
           h3 Catch We Build SG LIVE next month!
-          //- p.countdown
-          //- p#livetime
+          p.countdown
+          p#livetime
 
         section
           h3 open events
@@ -66,15 +66,30 @@ html(lang='en')
                   span on 15 Jul, Mon
                 p.tagline by iOS DevScout
             li
+              a(href='https://www.facebook.com/events/538311776229894')
+                p AWS User Group Singapore 3rd Meetup
+                  span on 15 Jul, Mon
+                p.tagline by AWS User Group Singapore
+            li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/127560042/')
                 p July Meetup
                   span on 16 Jul, Tue
                 p.tagline by Singapore Ruby Group
             li
-              a(href='https://www.facebook.com/events/538311776229894')
-                p AWS User Group Singapore 3rd Meetup
-                  span on 15 Jul, Mon
-                p.tagline by AWS User Group Singapore
+              a(href='http://www.meetup.com/Singapore-JS/events/129212532/')
+                p Book Club: Dom Enlightenment
+                  span on 18 Jul, Thu
+                p.tagline by Singapore JS
+            li
+              a(href='http://www.meetup.com/devops-singapore/events/129033332/')
+                p DevOps Singapore Meetup #13: Enterprise DevOps
+                  span on 23 Jul, Tue
+                p.tagline by DevOps Singapore
+            li
+              a(href='https://www.facebook.com/events/486847914730774/')
+                p Singapore PHP User Group Meetup (July 2013)
+                  span on 23 Jul, Tue
+                p.tagline by Singapore PHP User Group
             li
               a(href='http://www.meetup.com/makermeetup/Singapore-SG/986032/')
                 p Singapore Makers Forum
@@ -86,6 +101,11 @@ html(lang='en')
                   span on 28 Jul, Sun
                 p.tagline by William Hooi
             li
+              a(href='http://www.meetup.com/Agile-Singapore/events/126733642/')
+                p Jul/2013 - Open Space
+                  span on 29 Jul, Mon
+                p.tagline by Agile Singapore
+            li
               a(href='http://ccsg-workshop0813.eventbrite.com/')
                 p Organising Life and Work with Evernote
                   span on 3 Aug, Sat
@@ -94,6 +114,11 @@ html(lang='en')
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/121666282/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
                   span on 16 Aug, Fri
+                p.tagline by HTML5Rocks@SG
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93222582/')
+                p HTML5 Series - Chapter 7: Oh so precious Device !
+                  span on 23 Aug, Fri
                 p.tagline by HTML5Rocks@SG
 
         section
