--- a/views/index.jade
+++ b/views/index.jade
@@ -53,7 +53,7 @@ html(lang='en')
       .main.container
 
         div.live
-          h3 Catch We Build SG LIVE next month!
+          h3 Catch We Build SG LIVE
           p.countdown
           p#livetime
 
