--- a/views/index.jade
+++ b/views/index.jade
@@ -61,20 +61,15 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.facebook.com/events/510620365658892/')
-                p iOS Dev Scout # July Meetup
-                  span on 15 Jul, Mon
-                p.tagline by iOS DevScout
-            li
-              a(href='https://www.facebook.com/events/538311776229894')
-                p AWS User Group Singapore 3rd Meetup
-                  span on 15 Jul, Mon
-                p.tagline by AWS User Group Singapore
-            li
               a(href='http://www.meetup.com/Singapore-Ruby-Group/events/127560042/')
                 p July Meetup
                   span on 16 Jul, Tue
                 p.tagline by Singapore Ruby Group
+            li
+              a(href='http://www.meetup.com/Bubbly-TechTalks/events/128043812/')
+                p Bubbly TechTalk: Scaling Your Backend with Scala
+                  span on 17 Jul, Wed
+                p.tagline by Bubbly TechTalks
             li
               a(href='http://www.meetup.com/Singapore-JS/events/129212532/')
                 p Book Club: Dom Enlightenment
@@ -120,6 +115,11 @@ html(lang='en')
                 p HTML5 Series - Chapter 7: Oh so precious Device !
                   span on 23 Aug, Fri
                 p.tagline by HTML5Rocks@SG
+            li
+              a(href='https://www.facebook.com/events/547479401979766')
+                p HacKIDemia Mentors Meeting & Workshop
+                  span on 23 Aug, Fri
+                p.tagline by Hackidemia Singapore
 
         section
           h3 open source
