--- a/views/index.jade
+++ b/views/index.jade
@@ -106,6 +106,11 @@ html(lang='en')
                   span on 3 Aug, Sat
                 p.tagline by Creative Crew
             li
+              a(href='https://www.facebook.com/events/487872141305088/')
+                p Arduino Community Meetup
+                  span on 5 Aug, Mon
+                p.tagline by Singapore Arduino Club
+            li
               a(href='http://www.meetup.com/HTML5Rocks-SG/events/121666282/')
                 p HTML5 Series - Chapter 6: ... so tricky details !
                   span on 16 Aug, Fri
