--- a/views/index.jade
+++ b/views/index.jade
@@ -61,21 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/127560042/')
-                p July Meetup
-                  span on 16 Jul, Tue
-                p.tagline by Singapore Ruby Group
-            li
-              a(href='http://www.meetup.com/Bubbly-TechTalks/events/128043812/')
-                p Bubbly TechTalk: Scaling Your Backend with Scala
-                  span on 17 Jul, Wed
-                p.tagline by Bubbly TechTalks
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/129212532/')
-                p Book Club: Dom Enlightenment
-                  span on 18 Jul, Thu
-                p.tagline by Singapore JS
-            li
               a(href='http://www.meetup.com/devops-singapore/events/129033332/')
                 p DevOps Singapore Meetup #13: Enterprise DevOps
                   span on 23 Jul, Tue
@@ -85,6 +70,16 @@ html(lang='en')
                 p Singapore PHP User Group Meetup (July 2013)
                   span on 23 Jul, Tue
                 p.tagline by Singapore PHP User Group
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/130349412/')
+                p Book Club: Dom Enlightenment
+                  span on 25 Jul, Thu
+                p.tagline by Singapore JS
+            li
+              a(href='https://www.facebook.com/events/541822539219002')
+                p General Hackers Skills Sharing
+                  span on 26 Jul, Fri
+                p.tagline by General Hackers
             li
               a(href='http://www.meetup.com/makermeetup/Singapore-SG/986032/')
                 p Singapore Makers Forum
@@ -100,6 +95,16 @@ html(lang='en')
                 p Jul/2013 - Open Space
                   span on 29 Jul, Mon
                 p.tagline by Agile Singapore
+            li
+              a(href='http://www.meetup.com/Bubbly-TechTalks/events/129981562/')
+                p Bubbly TechTalk: Scaling Your Backend with Scala [NEW DATE]
+                  span on 1 Aug, Thu
+                p.tagline by Bubby TechTalks
+            li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/126909182/')
+                p 'Data in the City' Hackathon - 2nd-4th August 2013
+                  span on 2 Aug, Fri
+                p.tagline by R User Group Singapore
             li
               a(href='http://ccsg-workshop0813.eventbrite.com/')
                 p Organising Life and Work with Evernote
