amended specta repo. fixed #15.

--- a/views/index.jade
+++ b/views/index.jade
@@ -61,26 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/devops-singapore/events/129033332/')
-                p DevOps Singapore Meetup #13: Enterprise DevOps
-                  span on 23 Jul, Tue
-                p.tagline by DevOps Singapore
-            li
-              a(href='https://www.facebook.com/events/486847914730774/')
-                p Singapore PHP User Group Meetup (July 2013)
-                  span on 23 Jul, Tue
-                p.tagline by Singapore PHP User Group
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/130349412/')
-                p Book Club: Dom Enlightenment
-                  span on 25 Jul, Thu
-                p.tagline by Singapore JS
-            li
-              a(href='https://www.facebook.com/events/541822539219002')
-                p General Hackers Skills Sharing
-                  span on 26 Jul, Fri
-                p.tagline by General Hackers
-            li
               a(href='http://www.meetup.com/makermeetup/Singapore-SG/986032/')
                 p Singapore Makers Forum
                   span on 27 Jul, Sat
@@ -110,6 +90,11 @@ html(lang='en')
                 p Organising Life and Work with Evernote
                   span on 3 Aug, Sat
                 p.tagline by Creative Crew
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/130751652/')
+                p talk.js
+                  span on 5 Aug, Mon
+                p.tagline by Singapore JS
             li
               a(href='https://www.facebook.com/events/487872141305088/')
                 p Arduino Community Meetup
