--- a/views/index.jade
+++ b/views/index.jade
@@ -61,60 +61,60 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/makermeetup/Singapore-SG/986032/')
-                p Singapore Makers Forum
-                  span on 27 Jul, Sat
-                p.tagline by Singapore MAKE Community
+              a(href='https://www.facebook.com/events/197860927047102')
+                p Raspberry Jam SG #5
+                  span on 22 Aug, Thu
+                p.tagline by RaspberryPI & Co Singapore
             li
-              a(href='https://www.facebook.com/events/402721889837450/')
-                p Singapore Mini Maker Faire: 3D Printing Forum
-                  span on 28 Jul, Sun
-                p.tagline by William Hooi
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/126733642/')
-                p Jul/2013 - Open Space
-                  span on 29 Jul, Mon
-                p.tagline by Agile Singapore
-            li
-              a(href='http://www.meetup.com/Bubbly-TechTalks/events/129981562/')
-                p Bubbly TechTalk: Scaling Your Backend with Scala [NEW DATE]
-                  span on 1 Aug, Thu
-                p.tagline by Bubby TechTalks
-            li
-              a(href='http://www.meetup.com/R-User-Group-SG/events/126909182/')
-                p 'Data in the City' Hackathon - 2nd-4th August 2013
-                  span on 2 Aug, Fri
-                p.tagline by R User Group Singapore
-            li
-              a(href='http://ccsg-workshop0813.eventbrite.com/')
-                p Organising Life and Work with Evernote
-                  span on 3 Aug, Sat
-                p.tagline by Creative Crew
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/130751652/')
-                p talk.js
-                  span on 5 Aug, Mon
-                p.tagline by Singapore JS
-            li
-              a(href='https://www.facebook.com/events/487872141305088/')
-                p Arduino Community Meetup
-                  span on 5 Aug, Mon
-                p.tagline by Singapore Arduino Club
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/121666282/')
-                p HTML5 Series - Chapter 6: ... so tricky details !
-                  span on 16 Aug, Fri
-                p.tagline by HTML5Rocks@SG
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93222582/')
-                p HTML5 Series - Chapter 7: Oh so precious Device !
+              a(href='https://www.facebook.com/events/629104993780663')
+                p Elixir language by @Chang Sau Sheong
                   span on 23 Aug, Fri
-                p.tagline by HTML5Rocks@SG
+                p.tagline by General Hackers
             li
               a(href='https://www.facebook.com/events/547479401979766')
                 p HacKIDemia Mentors Meeting & Workshop
                   span on 23 Aug, Fri
                 p.tagline by Hackidemia Singapore
+            li
+              a(href='https://www.facebook.com/events/1382235725335564')
+                p HTML5 Series - Chapter 6: ... so tricky details !
+                  span on 23 Aug, Fri
+                p.tagline by HTML5Rocks@SG
+            li
+              a(href='http://www.meetup.com/Agile-Singapore/events/134495432/')
+                p Aug/2013 - Open Space
+                  span on 27 Aug, Tue
+                p.tagline by Agile Singapore
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/135361092/')
+                p August Meetup
+                  span on 27 Aug, Tue
+                p.tagline by Singapore Ruby Group
+            li
+              a(href='https://www.facebook.com/events/1382235725335564')
+                p Neo4J database by @Rishi
+                  span on 30 Aug, Fri
+                p.tagline by General Hackers
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93222582/')
+                p HTML5 Series - Chapter 7: Oh so precious Device !
+                  span on 30 Aug, Fri
+                p.tagline by HTML5Rocks@SG
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/131525012/')
+                p Book Club: Functional JavaScript
+                  span on 5 Sep, Thu
+                p.tagline by Singapore JS
+            li
+              a(href='https://www.facebook.com/events/301692606642784')
+                p Web audio API by @Chinmay
+                  span on 6 Sep, Fri
+                p.tagline by General Hackers
+            li
+              a(href='http://geekcamp.sg/')
+                p GeekcampSG by geeks for geeks
+                  span on 7 Sep, Sat
+                p.tagline by Geekcamp
 
         section
           h3 open source
