--- a/views/index.jade
+++ b/views/index.jade
@@ -60,26 +60,7 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-            li
-              a(href='https://www.facebook.com/events/197860927047102')
-                p Raspberry Jam SG #5
-                  span on 22 Aug, Thu
-                p.tagline by RaspberryPI & Co Singapore
-            li
-              a(href='https://www.facebook.com/events/629104993780663')
-                p Elixir language by @Chang Sau Sheong
-                  span on 23 Aug, Fri
-                p.tagline by General Hackers
-            li
-              a(href='https://www.facebook.com/events/547479401979766')
-                p HacKIDemia Mentors Meeting & Workshop
-                  span on 23 Aug, Fri
-                p.tagline by Hackidemia Singapore
-            li
-              a(href='https://www.facebook.com/events/1382235725335564')
-                p HTML5 Series - Chapter 6: ... so tricky details !
-                  span on 23 Aug, Fri
-                p.tagline by HTML5Rocks@SG
+
             li
               a(href='http://www.meetup.com/Agile-Singapore/events/134495432/')
                 p Aug/2013 - Open Space
@@ -91,6 +72,11 @@ html(lang='en')
                   span on 27 Aug, Tue
                 p.tagline by Singapore Ruby Group
             li
+              a(href='https://www.facebook.com/events/205262262975191')
+                p Creative Coders Meet Up
+                  span on 29 Aug, Thu
+                p.tagline by Creative Coders
+            li
               a(href='https://www.facebook.com/events/1382235725335564')
                 p Neo4J database by @Rishi
                   span on 30 Aug, Fri
@@ -101,8 +87,18 @@ html(lang='en')
                   span on 30 Aug, Fri
                 p.tagline by HTML5Rocks@SG
             li
+              a(href='http://www.meetup.com/devops-singapore/events/136655542/')
+                p DevOps Singapore Meetup #14: Continuous integration with testing before merging
+                  span on 4 Sep, Wed
+                p.tagline by DevOps Singapore
+            li
               a(href='http://www.meetup.com/Singapore-JS/events/131525012/')
                 p Book Club: Functional JavaScript
+                  span on 5 Sep, Thu
+                p.tagline by Singapore JS
+            li
+              a(href='https://www.facebook.com/events/1403363559880673')
+                p BigData.SG September Meetup - Thursday Sept 5th
                   span on 5 Sep, Thu
                 p.tagline by Singapore JS
             li
@@ -115,6 +111,11 @@ html(lang='en')
                 p GeekcampSG by geeks for geeks
                   span on 7 Sep, Sat
                 p.tagline by Geekcamp
+            li
+              a(href='https://www.facebook.com/events/163064807216602/')
+                p SG Makers meetup
+                  span on 27 Sep, Fri
+                p.tagline by Singapore Makers
 
         section
           h3 open source
