--- a/views/index.jade
+++ b/views/index.jade
@@ -102,6 +102,11 @@ html(lang='en')
                   span on 5 Sep, Thu
                 p.tagline by Singapore JS
             li
+              a(href='https://www.facebook.com/events/558850667504339')
+                p Singapore 3D Printing Meetup IV
+                  span on 5 Sep, Thu
+                p.tagline by Funbie Studios
+            li
               a(href='https://www.facebook.com/events/301692606642784')
                 p Web audio API by @Chinmay
                   span on 6 Sep, Fri
