--- a/views/index.jade
+++ b/views/index.jade
@@ -60,32 +60,6 @@ html(lang='en')
         section
           h3 open events
           ul.open-list.first
-
-            li
-              a(href='http://www.meetup.com/Agile-Singapore/events/134495432/')
-                p Aug/2013 - Open Space
-                  span on 27 Aug, Tue
-                p.tagline by Agile Singapore
-            li
-              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/135361092/')
-                p August Meetup
-                  span on 27 Aug, Tue
-                p.tagline by Singapore Ruby Group
-            li
-              a(href='https://www.facebook.com/events/205262262975191')
-                p Creative Coders Meet Up
-                  span on 29 Aug, Thu
-                p.tagline by Creative Coders
-            li
-              a(href='https://www.facebook.com/events/1382235725335564')
-                p Neo4J database by @Rishi
-                  span on 30 Aug, Fri
-                p.tagline by General Hackers
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93222582/')
-                p HTML5 Series - Chapter 7: Oh so precious Device !
-                  span on 30 Aug, Fri
-                p.tagline by HTML5Rocks@SG
             li
               a(href='http://www.meetup.com/devops-singapore/events/136655542/')
                 p DevOps Singapore Meetup #14: Continuous integration with testing before merging
@@ -116,6 +90,16 @@ html(lang='en')
                 p GeekcampSG by geeks for geeks
                   span on 7 Sep, Sat
                 p.tagline by Geekcamp
+            li
+              a(href='https://www.eventbrite.com/event/7344093381')
+                p Creative Crew Talks - August Meeting 2013
+                  span on 10 Sep, Tue
+                p.tagline by Creative Crew
+            li
+              a(href='https://www.facebook.com/events/680897865271710/')
+                p iOS Dev Scout # Sept Meetup
+                  span on 23 Sep, Mon
+                p.tagline by iOS DevScout
             li
               a(href='https://www.facebook.com/events/163064807216602/')
                 p SG Makers meetup
