--- a/views/index.jade
+++ b/views/index.jade
@@ -96,6 +96,11 @@ html(lang='en')
                   span on 10 Sep, Tue
                 p.tagline by Creative Crew
             li
+              a(href='http://sg.hackandtell.org/')
+                p Hack and Tell
+                  span on 10 Sep, Tue
+                p.tagline by @kaihendry & @vikramverma
+            li
               a(href='https://www.facebook.com/events/680897865271710/')
                 p iOS Dev Scout # Sept Meetup
                   span on 23 Sep, Mon
