--- a/views/index.jade
+++ b/views/index.jade
@@ -86,6 +86,11 @@ html(lang='en')
                   span on 6 Sep, Fri
                 p.tagline by General Hackers
             li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93223052/')
+                p HTML5 Series - Chapter 8: It's also about style !
+                  span on 6 Sep, Fri
+                p.tagline by HTML5Rocks@SG
+            li
               a(href='http://geekcamp.sg/')
                 p GeekcampSG by geeks for geeks
                   span on 7 Sep, Sat
