--- a/views/index.jade
+++ b/views/index.jade
@@ -61,41 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='http://www.meetup.com/devops-singapore/events/136655542/')
-                p DevOps Singapore Meetup #14: Continuous integration with testing before merging
-                  span on 4 Sep, Wed
-                p.tagline by DevOps Singapore
-            li
-              a(href='http://www.meetup.com/Singapore-JS/events/131525012/')
-                p Book Club: Functional JavaScript
-                  span on 5 Sep, Thu
-                p.tagline by Singapore JS
-            li
-              a(href='https://www.facebook.com/events/1403363559880673')
-                p BigData.SG September Meetup - Thursday Sept 5th
-                  span on 5 Sep, Thu
-                p.tagline by Singapore JS
-            li
-              a(href='https://www.facebook.com/events/558850667504339')
-                p Singapore 3D Printing Meetup IV
-                  span on 5 Sep, Thu
-                p.tagline by Funbie Studios
-            li
-              a(href='http://www.meetup.com/HTML5Rocks-SG/events/93223052/')
-                p HTML5 Series - Chapter 8: It's also about style !
-                  span on 6 Sep, Fri
-                p.tagline by HTML5Rocks@SG
-            li
-              a(href='https://www.facebook.com/events/301692606642784')
-                p Web audio API by @Chinmay
-                  span on 6 Sep, Fri
-                p.tagline by General Hackers
-            li
-              a(href='http://geekcamp.sg/')
-                p GeekcampSG by geeks for geeks
-                  span on 7 Sep, Sat
-                p.tagline by Geekcamp
-            li
               a(href='https://www.eventbrite.com/event/7344093381')
                 p Creative Crew Talks - August Meeting 2013
                   span on 10 Sep, Tue
@@ -105,6 +70,16 @@ html(lang='en')
                 p Hack and Tell
                   span on 10 Sep, Tue
                 p.tagline by @kaihendry & @vikramverma
+            li
+              a(href='http://www.meetup.com/Singapore-JS/events/135865592/')
+                p Book Club: Functional JavaScript
+                  span on 12 Sep, Thu
+                p.tagline by Singapore JS
+            li
+              a(href='http://www.meetup.com/Agile-Singapore/events/137237922/')
+                p Book Craig Langenfeld: Why Ceremonies?
+                  span on 12 Sep, Thu
+                p.tagline by Agile Singapore
             li
               a(href='https://www.facebook.com/events/680897865271710/')
                 p iOS Dev Scout # Sept Meetup
