--- a/views/index.jade
+++ b/views/index.jade
@@ -61,16 +61,6 @@ html(lang='en')
           h3 open events
           ul.open-list.first
             li
-              a(href='https://www.eventbrite.com/event/7344093381')
-                p Creative Crew Talks - August Meeting 2013
-                  span on 10 Sep, Tue
-                p.tagline by Creative Crew
-            li
-              a(href='http://sg.hackandtell.org/')
-                p Hack and Tell
-                  span on 10 Sep, Tue
-                p.tagline by @kaihendry & @vikramverma
-            li
               a(href='http://www.meetup.com/Singapore-JS/events/135865592/')
                 p Book Club: Functional JavaScript
                   span on 12 Sep, Thu
@@ -81,15 +71,40 @@ html(lang='en')
                   span on 12 Sep, Thu
                 p.tagline by Agile Singapore
             li
-              a(href='https://www.facebook.com/events/680897865271710/')
-                p iOS Dev Scout # Sept Meetup
-                  span on 23 Sep, Mon
-                p.tagline by iOS DevScout
+              a(href='http://www.meetup.com/Singapore-Android-Developers/events/138087342/')
+                p SG Android Devs Sept Meetup
+                  span on 18 Sep, Thu
+                p.tagline by Singapore Android Developers
+            li
+              a(href='https://www.facebook.com/events/680897865271710')
+                p Clojure by @Jiang Fung
+                  span on 20 Sep, Fri
+                p.tagline by General Hackers
+            li
+              a(href='http://www.meetup.com/Singapore-Ruby-Group/events/139384022')
+                p September Meetup
+                  span on 24 Sep, Tue
+                p.tagline by Singapore Ruby Group
+            li
+              a(href='http://www.meetup.com/R-User-Group-SG/events/136902562')
+                p An update on useR! 2013
+                  span on 26 Sep, Thu
+                p.tagline by U User Group
             li
               a(href='https://www.facebook.com/events/163064807216602/')
                 p SG Makers meetup
                   span on 27 Sep, Fri
                 p.tagline by Singapore Makers
+            li
+              a(href='http://www.meetup.com/HTML5Rocks-SG/events/111422882/')
+                p Firefox OS
+                  span on 27 Sep, Fri
+                p.tagline by HTML5Rocks@SG
+            li
+              a(href='https://www.facebook.com/events/498058460269196')
+                p Scala by @Raymond Tay
+                  span on 27 Sep, Fri
+                p.tagline by General Hackers
 
         section
           h3 open source
